# daggerml-cli

./: .gitignore  README.md  cache_dir  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  main.yml  ruff.yml
daggerml/: __init__.py  cli.py  dags.py  data.py  users.py  util.py
daggerml_cli/: __about__.py  __main__.py  api.py  config.py  core.py  dag-viz.html  dags.py  db.py  graph.py  main.py  pack.py  repo.py  topology.py  users.py  util.py
daggerml_cli/cli/: __init__.py
daggerml_cli/util/: config.py  restapi.py  template.py  template_parser.py
examples/: foobarbaz.edn  foop.edn
src/daggerml_cli/: __about__.py  api.py  config.py  db.py  remote_file_handler.py  remote_s3_handler.py  repo.py  topology.py  util.py
src/daggerml_cli/cli/: __init__.py
src/daggerml_cli/contrib/: lambda_adapter.py  local_adapter.py
tests/: fn.py  python-local-adapter  test_api.py  test_cli.py  test_config.py  test_daggerml_cli.py  test_db.py  test_repo.py  test_repo_unit.py  util.py
tests/fn/: sum.py
