[tool.poetry]
name = "daggerml"
version = "0.1.1"
description = ""
authors = ["Micha Niskin <micha.niskin@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
daggerml = "daggerml.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.0"}
requests = "^2.27.1"
# PyYAML = "^6.0"
# edn-format = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
